# CBox

./: README.md
CBox/backend/: CMakeLists.txt  schema.sql
CBox/backend/include/auth/: auth_service.hpp  jwt_handler.hpp
CBox/backend/include/database/: database.hpp  group_repository.hpp  message_repository.hpp
CBox/backend/include/handlers/: friend_handler.hpp  group_handler.hpp
CBox/backend/include/server/: session_manager.hpp
CBox/backend/include/utils/: logger.hpp
CBox/backend/src/: main.cpp
CBox/backend/src/auth/: auth_service.cpp  jwt_handler.cpp
CBox/backend/src/database/: database.cpp  group_repository.cpp  user_repository.cpp
CBox/backend/src/handlers/: friend_handler.cpp  group_handler.cpp
CBox/backend/src/server/: session.cpp  session_manager.cpp
CBox/backend/src/utils/: logger.cpp
assets/: backend_start
backend/: CMakeLists.txt
backend/include/database/: user_repository.hpp
backend/include/handlers/: message_handler.hpp
backend/include/server/: session.hpp  websocket_server.hpp
backend/src/: client_session.cpp  client_session.h  database.cpp  database.h  main.cpp  server.cpp  server.h
backend/src/database/: group_repository.cpp  message_repository.cpp  user_repository.cpp
backend/src/handlers/: message_handler.cpp
backend/src/server/: session_manager.cpp  websocket_server.cpp
backend/src/utils/: logger.cpp
